Fix close button alignmet

--- a/app/assets/stylesheets/navbar.css
+++ b/app/assets/stylesheets/navbar.css
@@ -64,7 +64,7 @@ header div:nth-child(1) {
 }
 
 #burger.active span:nth-child(3) {
-  transform: translateY(-5px) rotate(-45deg);
+  transform: translateY(-6px) rotate(-45deg);
 }
 
 #burger span {
